--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="">Contact us</a></li>
              </ul>
         </nav>
-        <div id="logo">
+        <div id="logo" class="leader">
             <a href="">Ahmad Uppal</a>
         </div>
         <nav id="social-links">
